wxc/include/ewxw/wxc_glue.h


int        wxGauge_GetBezelFace( TSelf(wxGauge) _obj );

int        wxGauge_GetRange( TSelf(wxGauge) _obj );

int        wxGauge_GetShadowWidth( TSelf(wxGauge) _obj );

int        wxGauge_GetValue( TSelf(wxGauge) _obj );

void       wxGauge_SetBezelFace( TSelf(wxGauge) _obj, int w );

void       wxGauge_SetRange( TSelf(wxGauge) _obj, int r );

void       wxGauge_SetShadowWidth( TSelf(wxGauge) _obj, int w );

void       wxGauge_SetValue( TSelf(wxGauge) _obj, int pos );